--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,7 @@
     "description": "Creates a 3D render of a minecraft skin in PHP",
     "type": "library",
     "require": {
-        "php": ">=7.0",
-        "intervention/image": "^2.5"
+        "php": ">=7.0"
     },
     "authors": [
         {
